syntax = "proto3";
package ldap;

service LdapService {
  rpc AddUser (UserRequest) returns (GenericResponse);
  rpc DeleteUser (UserIdRequest) returns (GenericResponse);
  rpc ModifyUser (ModifyUserRequest) returns (GenericResponse);
  rpc ListUser (Empty) returns (UserListResponse);
  rpc SearchUser (UserIdRequest) returns (UserDetailResponse);
  rpc AuthenticateUser (AuthRequest) returns (AuthResponse);
  rpc ToggleUserStatus (ToggleUserStatusRequest) returns (GenericResponse);

  rpc AddGroup (GroupRequest) returns (GenericResponse);
  rpc DeleteGroup (GroupRequest) returns (GenericResponse);
  rpc ListGroup (GroupRequest) returns (GroupDetailResponse);
  rpc SearchGroup (GroupRequest) returns (GroupDetailResponse);

  rpc AddUserToGroup (UserGroupRequest) returns (GenericResponse);
  rpc RemoveUserFromGroup (UserGroupRequest) returns (GenericResponse);
  rpc ListUserInGroup (GroupRequest) returns (UserListResponse);
  rpc SearchUserInGroup (UserGroupRequest) returns (GenericResponse);
}

message Empty {}

message GenericResponse {
  string message = 1;
}

message UserRequest {
  string uid = 1;
  string userPassword = 2;
  string cn = 3;
  string sn = 4;
  string homeDirectory = 5;
  string loginShell = 6;
  string givenName = 7;
  string displayName = 8;
  string gidNumber = 9;
  string gecos = 10;
}

message UserIdRequest {
  string uid = 1;
}

message ModifyUserRequest {
  string uid = 1;
  map<string, string> changes = 2;
}

message AuthRequest {
  string uid = 1;
  string userPassword = 2;
}

message AuthResponse {
  bool success = 1;
  string message = 2;
}

message ToggleUserStatusRequest {
  string uid = 1;
  bool enable = 2; // true=啟用, false=停用
}

message GroupRequest {
  string groupName = 1;
}

message UserGroupRequest {
  string uid = 1;
  string groupName = 2;
}

message UserListResponse {
  repeated string users = 1;
}

message UserDetailResponse {
  string details = 1;
}

message GroupDetailResponse {
  string details = 1;
}